--- a/style.scss
+++ b/style.scss
@@ -62,15 +62,10 @@ body {
 
 /*--------HEADER-----------------*/
 .header {
-    position: sticky;
-    top: 0;
-    left: 0;
-    right: 0;
     display: flex;
     padding: 0;
     background: #fff;
     z-index: 99;
-
 
 }
 
@@ -145,16 +140,27 @@ body {
 }
 
 .header__logo {
-    position: relative;
+    position: absolute;
     display: block;
     margin: 0 auto;
     background: #fff;
+    justify-self: center;
+    width: 10rem;
+    height: 10rem;
+    z-index: 99;
+    top: 5%;
+    left: 50%;
+    transform: translate(-50%, -5%);
+    border-radius: 50%;
 
     img {
         display: block;
         width: 7rem;
         max-width: 7rem;
-
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
     }
 
 }
@@ -172,7 +178,7 @@ body {
     transition-duration: 0.8s;
     transition-timing-function: cubic-bezier(0.77, 0, 0.175, 1);
     margin: 0;
-    z-index: 1;
+    z-index: 999;
     display: flex;
     flex-direction: column;
 
@@ -377,12 +383,14 @@ body {
 
     blockquote {
         color: #fff;
-        font-size: 1.5rem;
+        font-size: 2.5rem;
         font-weight: bold;
         grid-column: 1 / -1;
         grid-row: 1 / 4;
-        margin: 0 0 0 1.6rem;
+        margin: 0;
         align-self: center;
+        width: 80%;
+        justify-self: center;
     }
 }
 
@@ -402,8 +410,8 @@ body {
 .about__overlay {
     width: 100%;
     height: 100%;
-    grid-column: 1 / -1;
-    grid-row: 4 / -1;
+    grid-column: 1 / 6;
+    grid-row: 3 / -1;
 
     img {
         width: 100%;
@@ -660,10 +668,28 @@ body {
     padding: 2rem;
 }
 
+.approach__bannerimg {
+    display: flex;
+    flex-direction: column;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+
+    img {
+        width: 150px;
+    }
+
+    h3 {
+        font-size: 1.3rem;
+        padding: 0 0 2rem 0;
+        border-bottom: 3px solid $primarybg;
+    }
+}
+
 .approach__seasons {
     display: flex;
     flex-direction: column;
-    height: 100vh;
+
 
 }
 
@@ -672,10 +698,9 @@ body {
     flex-direction: column;
     justify-content: center;
     padding: 0;
-    height: 100vh;
 }
 
-.approach__intro {
+.approach__season1intro {
     display: flex;
     position: relative;
     flex-direction: column;
@@ -693,7 +718,9 @@ body {
         border-bottom: 3px solid #FFDE70;
     }
 
-    p {
+}
+
+.approach__season1para {
 
         width: 80%;
         letter-spacing: 2px;
@@ -708,7 +735,6 @@ body {
         &:nth-child(2) {
             padding: 0 0 2rem 0;
         }
-    }
 }
 
 .approach__season1_more {
@@ -724,21 +750,46 @@ body {
 }
 
 .approach__season1cards {
-    width: 80%;
     display: flex;
+    padding: 0 0 0 5px;
+    height: 100vh;
+
+    position: relative;
 }
 
 .approach__scard {
-    display: none;
-    width: 200px;
-    min-width: 200px;
-    height: 300px;
-    background: #e0e0e0;
-    box-shadow: 0 0 15px 8px #eeeeee inset,
-        0 0 15px #cacaca;
-    ;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: calc(100vw / 3.2);
+    height: 150px;
+    background: $primarybg;
     border-radius: 0.6rem;
+    position: relative;
+    cursor: pointer;
+    box-shadow: 0 0 14px #eeece6 inset;
+    transition: width 0.5s, height 0.5s;
 
+    p {
+        display: none;
+    }
+}
+
+
+.approach__cardnumber {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    left: 10%;
+    top: 5%;
+    transform: translate(-10%, -10%);
+    background: $secondarybg;
+    color: #fff;
 }
 
 .approach__upcoming {
@@ -891,17 +942,40 @@ body {
 }
 
 .netscience__apps {
-    display: grid;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: auto;
+    display: flex;
+    flex-direction: column;
 
-    h3 {
-        justify-self: center;
-        grid-column: 1 / -1;
-        grid-row: 1 / 2;
-        margin: 2rem 0 1rem 0;
+
+}
+
+.netscience__appheader {
+    width: 80%;
+    border-top: 1px solid #FFDE70;
+    border-bottom: 1px solid #FFDE70;
+    margin: 2rem 0 2rem 3rem;
+    padding: 2rem 0;
+    letter-spacing: 2px;
+    line-height: 2;
+    font-size: 1.6rem;
+}
+
+.netscience__applist {
+    width: 80%;
+    margin: 0;
+    align-self: center;
+    padding: 0 0 2rem 0;
+    letter-spacing: 2px;
+    line-height: 2;
+    font-size: 1.1rem;
+
+    dt {
+        font-size: 1.2rem;
+        font-weight: bold;
     }
 
+    dd {
+        margin: 0 0 2rem 0;
+    }
 }
 
 .netscience__circle {
@@ -939,36 +1013,6 @@ body {
         font-size: 0.8rem;
         height: 5rem;
     }
-}
-
-.netscience__circle1 {
-    grid-column: 1 / -1;
-    grid-row: 2 / 4;
-}
-
-.netscience__circle2 {
-    grid-column: 1 / -1;
-    grid-row: 5 / 7;
-}
-
-.netscience__circle3 {
-    grid-column: 1 / -1;
-    grid-row: 8 / 10;
-}
-
-.netscience__circle4 {
-    grid-column: 1 / -1;
-    grid-row: 11 / 13;
-}
-
-.netscience__circle5 {
-    grid-column: 1 / -1;
-    grid-row: 14 / 16;
-}
-
-.netscience__circle6 {
-    grid-column: 1 / -1;
-    grid-row: 17 / 19;
 }
 
 /*--------FOOTER-----------------*/
